--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Happy Birthday!</h1>
     <nav>
-        <a href="#cake" onclick="showCake()">Cake</a> |
-        <a href="#card" onclick="showCard()">Card</a> |
-        <a href="#message" onclick="showMessage()">Message</a>
+        <a href="#cake" onclick="showCake()" ontouchstart="showCake()">Cake</a> |
+        <a href="#card" onclick="showCard()" ontouchstart="showCard()">Card</a> |
+        <a href="#message" onclick="showMessage()" ontouchstart="showMessage()">Message</a>
     </nav>
     <!-- <div class="floating">
         💖 🌸 💖 🌸 💖
